# advent-of-code

./: .gitignore  Cargo.toml  mal.rs.tmpl
2019/: Makefile  mal.rs.tmpl
2019/src/: day1.rs  day12.rs  day5.rs  day7.rs  day8.rs
2020/: Cargo.toml  mal.rs.tmpl
2020/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs
src/: day10.rs  day11.rs  day12.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  intcode.rs  lib.rs
