[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["Ole Martin Ruud <dev@barskern.no>"]
edition = "2018"

[lib]
bench = false

[dependencies]
aoc-runner = "0.2.2"
aoc-runner-derive = "0.2.2"
nalgebra = { version = "0.23.1", features = ["serde-serialize"] }
itertools = "0.9.0"
fallible-iterator = "0.2.0"
anyhow = "1.0.34"
serde =  { version = "1.0.118", features = ["derive"] }
serde_scan = "0.4.0"
nom = "6.0.1"

[dev-dependencies]
criterion = "0.3.3"
